--- a/ExampleSite/i18n/en.toml
+++ b/ExampleSite/i18n/en.toml
@@ -3,3 +3,9 @@
     
 [readMore]
     other = 'Read more'
+
+[404_title]
+    other = 'Page not found'
+
+[404_text]
+    other = 'Looks like you've followed a broken link or entered a URL that doesn't exist on this site.'
