--- a/ExampleSite/i18n/en.toml
+++ b/ExampleSite/i18n/en.toml
@@ -8,4 +8,4 @@
     other = 'Page not found'
 
 [404_text]
-    other = 'Looks like you've followed a broken link or entered a URL that doesn't exist on this site.'
+    other = "Looks like you've followed a broken link or entered a URL that doesn't exist on this site."
